<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Masurdata" Id="{772b0d79-4d5e-4f80-a6bf-2770092bfe08}">
    <Declaration><![CDATA[TYPE ST_Masurdata :
STRUCT
	id: LINT;
	time2: REAL;
	primary_power: REAL;
	secondary_power: REAL;
	phase_shift: REAL;
	frequency: REAL;
	flux_density: REAL;
	Meta_id: LINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>