<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Metadata" Id="{63709c9e-e5c0-4aa1-938d-1c5bc83029d9}">
    <Declaration><![CDATA[TYPE ST_Metadata :
STRUCT
	Id: LINT;
	measurementname: STRING(255);
	carried_out: STRING(255);
	thickness: REAL;
	steel: STRING(255);
	joint_pre: STRING(255);
	root_face: REAL;
	opening_angel: REAL;
	edge_pre: STRING(255);
	welding_speed: REAL;
	laser_power: REAL;
	focal_position: REAL;
	distance_a_l: REAL;
	wire_feeding_rate: REAL;
	wire_diameter: REAL;
	wire_type: STRING(255);
	stickout: REAL;
	arc_dynamic: REAL;
	frequency: REAL;
	voltage_ac_power_source: REAL;
	distance_magnet_pole: REAL;
	magnet_pole_width: REAL;
	magnet_pole_type: STRING(255);
	core_dimension: REAL;
	very_good: STRING(255);
	normal: STRING(255);
	uniform_root_overcome: STRING(255);
	undercut: STRING(255);
	sporadic_seam_collapse: STRING(255);
	sporadic_dropout: STRING(255);
	bad: STRING(255);
	periodic_dropout: STRING(255);
	strong_seam_collapse: STRING(255);
	incomplite_penetration: STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>